fix: fixed About's overflow-x

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -9,7 +9,7 @@
 }
 
 .about h1 {
-	margin-top: 4rem;
+	padding-bottom: 2rem;
 }
 
 .about-text p {
@@ -62,4 +62,10 @@
 	.frame {
 		margin: 4rem 1rem;
 	}
+
+	.frame img.left-leaves,
+	.frame img.right-leaves {
+    	display: none;
+	}
+
 }
